--- a/index.html
+++ b/index.html
@@ -77,16 +77,19 @@
     <div class="col-md-6">
       
   <img src="/images/desktop/image-graphic-design.jpg" alt="apple-image" class="img-fluid">
-  <h3>Graphic design</h3>
-  <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
+  <div class="apple">
+    <h3>Graphic design</h3>
+  <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p></div>
+  
   
     </div>
     <div class="col-md-6">
       <img src="/images/desktop/image-photography.jpg" alt="orange-image" class="img-fluid">
+      <div class="apple">
       <h3>Photography</h3>
-      <p>
+      <p class="p-5">
   Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
-    
+    </div>
 
     </div>
   </div>
