--- a/index.html
+++ b/index.html
@@ -80,17 +80,18 @@
   <div class="apple">
     <h3>Graphic design</h3>
   <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p></div>
-  
-  
     </div>
+  
     <div class="col-md-6">
-      <img src="/images/desktop/image-photography.jpg" alt="orange-image" class="img-fluid">
+      <div class="photo">
+<img src="/images/desktop/image-photography.jpg" alt="" class="img-fluid">
       <div class="apple">
+
       <h3>Photography</h3>
       <p>
   Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
     </div>
-
+</div>
     </div>
   </div>
 </div>
