--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
   <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p></div>
     </div>
   
-    <div class="col-md-6">
-      <div class="photo">
-<img src="/images/desktop/image-photography.jpg" alt="" class="img-fluid">
+    <div class="col-md-6 photo">
+      <div class="">
+
       <div class="apple">
 
       <h3>Photography</h3>
